# e1039-analysis

./: README.md
AnaCustomFile/: README.md  setup.sh
AnaCustomFile/src/: CMakeLists.txt  CalibHitPos.cc  CalibHitPos.h  CheckEventData.cc  CheckEventData.h  Fun4AllHitMatrixInputManager.cc  Fun4AllHitMatrixInputManager.h  Fun4AllSRawEventOutputManagerV2.cc  Fun4AllSRawEventOutputManagerV2.h  Fun4AllTrackQAv1InputManager.cc  Fun4AllTrackQAv1InputManager.h  LinkDef.h
AnaCustomFile/work/: .gitignore  AnaHitMatrixFile.C  AnaTrackQAFile.C  ConvertHitMatrixFile.C
AnaRealDst/: .gitignore  README.md  setup.sh
AnaRealDst/macro/: Fun4All.C  Fun4RealDst.C  list_run.txt
AnaRealDst/src/: AnaEffCham.cc  AnaEffCham.h  AnaEffHodo.cc  AnaEffHodo.h  AnaHodoHit.cc  AnaHodoHit.h  AnaRealDst.cc  AnaRealDst.h  AnaTriggerHit.cc  AnaTriggerHit.h  CMakeLists.txt  LinkDef.h  UtilSQHit.cc  UtilSQHit.h
AnaRealDstSimple/: draw_real_dst.cc
AnaSimDst/: .gitignore  README.md  setup.sh
AnaSimDst/src/: AnaSimDst.cc  AnaSimDst.h  AnaSimHit.cc  AnaSimHit.h  AnaSimRunInfo.cc  AnaSimRunInfo.h  CMakeLists.txt  FilterSimEvent.cc  LinkDef.h  MakeMyTree.cc  MakeMyTree.h  SQDimuon.cc  SQDimuon.h  SQTrack.cc  SQTrack.h  SQTrueEvent.cc  SQTrueEvent.h  TraceHepMCParticle.cc  TraceHepMCParticle.h  TracePHG4Particle.cc  TracePHG4Particle.h  TreeData.cc  TreeData.h  TrueNodeMaker.cc  TrueNodeMaker.h  UtilDimuon.cc
AnaSimDst/work/: .gitignore  AnaSimTree.C  Fun4SimDst.C  Fun4SimMicroDst.C  Fun4SimTree.C  make-dst-list.sh
AnaTrkQA/: README.md  setup.sh
AnaTrkQA/macros/: Fun4Sim_TrkQA.C
AnaTrkQA/src/: AnaTrkQA.cxx  (+3 more)
CODAChainDev/: EventDisplay.C  Fun4CODA.C  Fun4DST.C  e906_data.opts  eve_disp.C  eve_disp_dst.C  gridrun.sh  gridsub.sh  run7_data.opts
CalibChamXT/: .gitignore  README.md  dataset.md  setup.sh
CalibChamXT/src/: AnaChamPlane.cc  AnaChamPlane.h  CMakeLists.txt  CalibData.cc  CalibData.h  CalibParam.cc  CalibParam.h  ExtractTdcDist.cc  ExtractTdcDist.h  FilterByTrigger.cc  FilterByTrigger.h  FitRTDist.cc  FitRTDist.h  LinkDef.h  MakeRTCurve.cc  MakeRTCurve.h  RTCurve.cc  RTCurve.h  SRMakeRTCurve.cc  SRMakeRTCurve.h
ChamRealizationDev/: .gitignore  README.md  setup.sh
DPEfficiency/: run.C
DstTreeIO/: README.md  ReadDstTree.C  WriteDstTree.C  setup.sh
E1039Shielding/: Fun4E1039Shielding.C  gridrun.sh  gridsub.sh
EMCalDev/: Fun4DQ.C  Fun4EMCal.C  G4_EMCal.C
Efficiency/: README.md  run.C
EvalJpsiAsymStat/: .gitignore  README.md  setup.sh
EvalJpsiAsymStat/src/: AnaSimDimuon.cc  AnaSimDimuon.h  AnaSimDst.cc  AnaSimDst.h  AnaSimRunInfo.cc  CMakeLists.txt  FilterSimEvent.h  LinkDef.h  TreeData.cc  TreeData.h  UtilAsym.cc  UtilAsym.h
EventDisplaySim/: EventDisplay4Sim.C  README.md
GenRoadset/: .gitignore  README.md  setup.sh
HitEmbedding/: README.md  setup.sh
HodoAccGap/: Fun4HodoAccGap.C  gridrun.sh  gridsub.sh
OnlMonDev/: Fun4MainDaq.C  G4_SensitiveDetectors.C  G4_Target.C  OnlMon4MainDaq.C
PileupDev/: README.md  setup.sh
PrgTrkDev/: DisplayOn.C  Fun4TrkDev.C  G4_SensitiveDetectors.C  G4_Target.C
Pythia8Demo/: Fun4Sim.C
RecoDev/: RecoE1039Data.C  RecoE1039Sim.C  RecoE906Data.C  setup.sh
SRawEventChainDev/: Fun4SRawEvent.C
SimChainDev/: .gitignore  EventDisplay.C  Fun4DB.C  Fun4Sim.C  G4_Target.C  README.md  ana.C  disp_geom.C  e906_data.opts  eve_disp.C  eve_disp_db.C  gridrun.sh  gridsub.sh  int_run.C  phpythia8_DY.cfg  phpythia8_Jpsi.cfg  phpythia8_Jpsi_direct.cfg  phpythia8_OC.cfg  phpythia8_psip.cfg
TargetSim/: gridrun.sh  gridsub.sh
TriggerAna/: .gitignore  README.txt  setup.sh
TrkDev/: Fun4PatternDB.C  Fun4TrkDev.C  ana.C  default.opts  gridrun.sh  gridsub.sh
(+241 files in other folders)
